--- a/style.CSS
+++ b/style.CSS
@@ -132,3 +132,28 @@ img{
 }
 
 
+.loader{
+	background-color: #000000;
+	cursor: wait;
+	height: 100%;
+	left: 0;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 9999;
+    transition: all 0.5s;
+}
+	.loader h1{
+		background: none;
+		border: none;
+		color: #FFFFFF;
+		font-size: 22px;
+		font-family: "Open Sans",sans-serif;
+		font-variant: small-caps;
+		font-weight: 700;
+		height: 700px;
+		line-height: 700px;
+		margin: 0 0 10px;
+		padding: 0;
+		text-align: center;
+	}
