--- a/style.CSS
+++ b/style.CSS
@@ -55,7 +55,7 @@ body{
     align-items: center;
     width: 100%;
     height: 100%;
-    margin-top: 3vh;
+    margin-top: 4vh;
     font-family: var(--font);
 }
 
@@ -101,7 +101,7 @@ body{
     justify-content: space-around;
     align-items: center;
     width:20%;
-    margin-top: 3vh;
+    margin-top: 4vh;
     padding: 1rem 2rem;
     background-color: var(--txt);
     color: var(--bg);
@@ -171,3 +171,8 @@ img{
 		padding: 0;
 		text-align: center;
 	}
+
+
+    #print img{
+        width: 10vw;
+    }
