--- a/style.CSS
+++ b/style.CSS
@@ -51,11 +51,11 @@ body{
 #left {
     display: inline-flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    justify-content: start;
+    align-items: start;
     width: 100%;
     height: 100%;
-    margin-top: 4vh;
+    margin-top: 2%;
     font-family: var(--font);
 }
 
@@ -101,7 +101,7 @@ body{
     justify-content: space-around;
     align-items: center;
     width:20%;
-    margin-top: 4vh;
+    margin-top: 2%;
     padding: 1rem 2rem;
     background-color: var(--txt);
     color: var(--bg);
