--- a/style.CSS
+++ b/style.CSS
@@ -46,6 +46,7 @@ body{
     flex-direction: row;
     width: 100%;
     height: 100%;
+    padding: 1% 0;
 }
 
 #left {
@@ -55,7 +56,6 @@ body{
     align-items: start;
     width: 100%;
     height: 100%;
-    margin-top: 2%;
     font-family: var(--font);
 }
 
@@ -105,7 +105,6 @@ body{
     justify-content: space-around;
     align-items: center;
     width:20%;
-    margin-top: 2%;
     padding: 1rem 2rem;
     background-color: var(--txt);
     color: var(--bg);
