--- a/style.CSS
+++ b/style.CSS
@@ -104,7 +104,7 @@ body{
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    width:20%;
+    width:26%;
     padding: 1rem 2rem;
     background-color: var(--txt);
     color: var(--bg);
@@ -176,6 +176,20 @@ img{
 	}
 
 
-    #print img{
-        width: 15vw;
+    #print{
+        width: fit-content;
+        display: flex;
+        flex-direction: row;
+        background-color: var(--vert);
+        color: var(--pomme);
+        padding: 0.5vh 0.5vw 0.5vh 0.5vw;
+        justify-content: end;
+        align-items: end;
     }
+    #img-print img{
+        width: 12vw;
+        height: 100%;
+        padding: 0.5vh 0.5vw 0vh 0vw;
+    }
+
+    
